{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 18,
  "lineage": "31a09daa-4821-a4a2-3f19-d1f83eb1b4b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a127988e133fe65",
            "arn": "arn:aws:ec2:us-west-2:031195399875:elastic-ip/eipalloc-04a127988e133fe65",
            "association_id": "eipassoc-0ce76c03654eb54de",
            "domain": "vpc",
            "id": "eipalloc-04a127988e133fe65",
            "instance": "i-0bc30492cdc6ca0e7",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0fff2f6673959b694",
            "private_dns": "ip-10-0-1-66.us-west-2.compute.internal",
            "private_ip": "10.0.1.66",
            "public_dns": "ec2-44-255-221-15.us-west-2.compute.amazonaws.com",
            "public_ip": "44.255.221.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-web-server-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-web-server-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web",
            "aws_internet_gateway.main",
            "aws_key_pair.main",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055c254ebd87b4dba",
            "arn": "arn:aws:ec2:us-west-2:031195399875:instance/i-0bc30492cdc6ca0e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc30492cdc6ca0e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "my-web-server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fff2f6673959b694",
            "private_dns": "ip-10-0-1-66.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.66",
            "public_dns": "ec2-54-191-130-108.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.130.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:031195399875:key/6c3a7e70-c8e0-4312-a3d1-432f5a20fe75",
                "throughput": 125,
                "volume_id": "vol-090f6998ff28fa75b",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d213edb48d1b5ee",
            "tags": {
              "Environment": "dev",
              "Name": "my-web-server-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-web-server-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ddde95223ee2d0ba"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031195399875:internet-gateway/igw-0e0ba27426f7dc959",
            "id": "igw-0e0ba27426f7dc959",
            "owner_id": "031195399875",
            "tags": {
              "Environment": "dev",
              "Name": "my-web-server-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-web-server-igw"
            },
            "vpc_id": "vpc-01cb6cb3948826709"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031195399875:route-table/rtb-0c7995be7c69f8b22",
            "id": "rtb-0c7995be7c69f8b22",
            "owner_id": "031195399875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0ba27426f7dc959",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-web-server-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-web-server-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cb6cb3948826709"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0728ab6776bc9680c",
            "route_table_id": "rtb-0c7995be7c69f8b22",
            "subnet_id": "subnet-00d213edb48d1b5ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031195399875:security-group/sg-0ddde95223ee2d0ba",
            "description": "Security group for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddde95223ee2d0ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-web-server-web-20260123182352655600000001",
            "name_prefix": "my-web-server-web-",
            "owner_id": "031195399875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-web-server-web-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-web-server-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cb6cb3948826709"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031195399875:subnet/subnet-00d213edb48d1b5ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d213edb48d1b5ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031195399875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-web-server-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-web-server-public-subnet"
            },
            "vpc_id": "vpc-01cb6cb3948826709"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031195399875:vpc/vpc-01cb6cb3948826709",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039a32a84e90e7c41",
            "default_route_table_id": "rtb-0d2f973b195ecc59e",
            "default_security_group_id": "sg-0533f05a1e5ef5785",
            "dhcp_options_id": "dopt-0426d43bcc38ce446",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cb6cb3948826709",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2f973b195ecc59e",
            "owner_id": "031195399875",
            "tags": {
              "Environment": "dev",
              "Name": "my-web-server-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-web-server-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}